updating the chat.html Q&A

--- a/public/chat.html
+++ b/public/chat.html
@@ -16,6 +16,22 @@
         <br>&nbsp;&nbsp;&nbsp;&nbsp; This command will output the version number of Node.js if it is installed</p>
     <p><strong style="color: blue;">Q:</strong> What is a static express web server?</p>
     <p><strong style="color: red;">A:</strong> A static Express web server is a server that serves static files, such as HTML, CSS, JavaScript, images, and other assets,<br>&nbsp;&nbsp;&nbsp;&nbsp;using the Express.js framework in a Node.js environment.<br>&nbsp;&nbsp;&nbsp;&nbsp;Static files are those that do not change in response to user input or other dynamic factors.</p>
+    <p><strong style="color: blue;">Q:</strong> Given server.js and profile.html a profile page with 4 buttons that navigates to the pages: about_me.html, album.html. funny.html, add1.html and chat.html<br>
+        &nbsp;&nbsp;&nbsp;&nbsp; What should be the files hierarchy?</p>
+    <p><strong style="color: red;">A:</strong> The files hierarchy should be as follows:<br>
+        &nbsp;&nbsp;&nbsp;&nbsp; server.js<br>
+        &nbsp;&nbsp;&nbsp;&nbsp; public/<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; profile.html<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; about_me.html<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; album.html<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; funny.html<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; add1.html<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; chat.html</p>
+        <p><strong style="color: blue;">Q:</strong> how to add a tab into a &lt;p&gt; tag? </p>
+        <p><strong style="color: red;">A:</strong> In HTML, the &lt;p&gt; tag does not inherently support tabs or multiple spaces. HTML collapses multiple whitespace characters (spaces, tabs, newlines) into a single space by default. 
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;To add spaces or simulate tab-like indentation within a paragraph, you can use several approaches: <br>
+            &nbsp;&nbsp;&nbsp;&nbsp;The non-breaking space character &amp;nbsp; can be used to insert multiple spaces: 
     <!-- Add more Q&A pairs as needed -->
 </body>
+
 </html>
