Added some text to the about me page

--- a/public/about-me.html
+++ b/public/about-me.html
@@ -7,7 +7,39 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>About Me</h1>
-    <p>This is some text about me.</p>
+    <div class="content">
+        <h1>About Me</h1>
+        <section>
+            <h2>Introduction</h2>
+            <p>My name is Nofar Nahum. I am a computer science student at Reichman university and a personal trainer .
+            <br>I am 28 years old and I live in Hadera, Israel.
+            <br>I love coding, exericing, gaming and music </p>
+
+        </section>
+
+        <section>
+            <h2>EDUCATION</h2>
+            <p> • 2021 – Present: B.Sc. Computer science student - Reichman University. <br>
+                &nbsp;&nbsp;Relevant courses: <br>
+                &nbsp;&nbsp;&nbsp;&nbsp;- Digital Architectures. <br>
+                &nbsp;&nbsp;&nbsp;&nbsp;- Object Oriented Programming with C# and .NET. <br>
+                &nbsp;&nbsp;&nbsp;&nbsp;- Internet Technologies and Full Stack Web Development. <br>
+                &nbsp;&nbsp;&nbsp;&nbsp;- From idea to reality: App Using AI tools. <br>
+                • Python course in Campus IL. </p>
+        </section>
+
+        <section>
+            <h2>Skills</h2>
+            <p>&nbsp;&nbsp;• Languages: Java, Python, C, C#, Java script, SQL, HTML, CSS.
+            <br>&nbsp;&nbsp;• Operating Systems: Linux (ubuntu) environment. </p>
+        </section>
+
+        <section>
+            <h2>MILITARY SERVICE</h2>
+            <p>&nbsp;&nbsp;• 2014-2016: Head Office in the Operations Division at the pit at the Kirya. </p>
+        </section>
+        
+        <br>
+        <a href="profile.html">Back to Profile</a>
 </body>
 </html>
