Added content to all the sub-pages

--- a/public/album.html
+++ b/public/album.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Album</h1>
-    <img src="fake-photo.jpg" alt="Fake Photo">
+    <img src="album_img.jpg" alt="Fake Photo">
+
+    <br>
+    <a href="profile.html">Back to Profile</a>
 </body>
 </html>
