--- a/public/chat.html
+++ b/public/chat.html
@@ -31,7 +31,11 @@
         <p><strong style="color: red;">A:</strong> In HTML, the &lt;p&gt; tag does not inherently support tabs or multiple spaces. HTML collapses multiple whitespace characters (spaces, tabs, newlines) into a single space by default. 
             <br>&nbsp;&nbsp;&nbsp;&nbsp;To add spaces or simulate tab-like indentation within a paragraph, you can use several approaches: <br>
             &nbsp;&nbsp;&nbsp;&nbsp;The non-breaking space character &amp;nbsp; can be used to insert multiple spaces: 
-    <!-- Add more Q&A pairs as needed -->
+
+    <br>
+    <br>
+    <a href="profile.html">Back to Profile</a>
+
 </body>
 
 </html>
