--- a/public/funny.html
+++ b/public/funny.html
@@ -9,6 +9,10 @@
 <body>
     <h1>Funny</h1>
     <p>This is some funny text.</p>
-    <img src="funny-image.jpg" alt="Funny Image">
+    <img src="funny_img.jpg" alt="Funny Image">
+
+    <br>
+    <a href="profile.html">Back to Profile</a>
+    
 </body>
 </html>
