added css design

--- a/public/about-me.html
+++ b/public/about-me.html
@@ -10,10 +10,10 @@
     <div class="content">
         <h1>About Me</h1>
         <section>
-            <h2>Introduction</h2>
+            <h2>INTRODUCTION</h2>
             <p>My name is Nofar Nahum. I am a computer science student at Reichman university and a personal trainer .
             <br>I am 28 years old and I live in Hadera, Israel.
-            <br>I love coding, exericing, gaming and music </p>
+            <br>I love coding, exericing, gaming and music. </p>
 
         </section>
 
@@ -24,12 +24,12 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;- Digital Architectures. <br>
                 &nbsp;&nbsp;&nbsp;&nbsp;- Object Oriented Programming with C# and .NET. <br>
                 &nbsp;&nbsp;&nbsp;&nbsp;- Internet Technologies and Full Stack Web Development. <br>
-                &nbsp;&nbsp;&nbsp;&nbsp;- From idea to reality: App Using AI tools. <br>
-                • Python course in Campus IL. </p>
+                &nbsp;&nbsp;&nbsp;&nbsp;- From idea to reality: App Using AI tools. <br></p>
+                <p>• Python course in Campus IL. </p>
         </section>
 
         <section>
-            <h2>Skills</h2>
+            <h2>SKILLS</h2>
             <p>&nbsp;&nbsp;• Languages: Java, Python, C, C#, Java script, SQL, HTML, CSS.
             <br>&nbsp;&nbsp;• Operating Systems: Linux (ubuntu) environment. </p>
         </section>
