final design changes

--- a/public/funny.html
+++ b/public/funny.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Funny</h1>
-    <p>This is some funny text.</p>
+    <h1 class="funny">Funny</h1>
+    <p>Just a cool chick chilling with its biggest fans:</p>
     <img src="funny_img.jpg" alt="Funny Image">
 
     <br>
