--- a/public/profile.html
+++ b/public/profile.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="rotate">Profile Page</h1>
+    <h1 class="spin-on-hover">Profile Page</h1>
     <button onclick="navigate('about-me.html')">About Me</button>
     <button onclick="navigate('album.html')">Album</button>
     <button onclick="navigate('funny.html')">Funny</button>
