--- a/public/about-me.html
+++ b/public/about-me.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="content">
-        <h1>About Me</h1>
+        <h1 class="about-me">About Me</h1>
         <section>
             <h2>INTRODUCTION</h2>
             <p>My name is Nofar Nahum. I am a computer science student at Reichman university and a personal trainer .
